# bhpl

./: CMakeLists.txt  LICENSE  README.md  build.sh  bytecode.txt  expected_output.s
examples/: add.bhpl
src/: main.cpp  utils.cpp
src/bytecode/front/include/: parser.hpp
src/bytecode/generator/: generator.cpp  output.cpp  writer.cpp
src/bytecode/generator/include/: generator.hpp  output.hpp  writer.hpp
src/codegen/x86_64/: writer.cpp  x86_64_context.cpp
src/codegen/x86_64/include/: writer.hpp  x86_64_context.hpp
src/front/: lexer.cpp  parser.cpp
src/front/include/: lexer.hpp
src/include/: utils.hpp
src/jit/: CMakeLists.txt
src/jit/bytecode/: reader.cpp
src/jit/bytecode/include/: reader.hpp
src/jit/codegen/x86_64/: runtime.cpp  writer.cpp  x86_64_context.cpp
src/jit/codegen/x86_64/include/: register.hpp  runtime.h  x86_64_context.hpp
src/linker/windows/: linker.cpp  writer.cpp
src/linker/windows/include/: linker.hpp  writer.hpp
